--- a/Calc_Gauss/css/style.css
+++ b/Calc_Gauss/css/style.css
@@ -1,9 +1,28 @@
 body {
     background-color: darkslategray;
-    color: antiquewhite;
-    font-size: 20px;
 }
 
 header {
+    border-style: groove;
+    font-size: 25px;
+    margin-left: 200px;
     text-align: center;
+    box-shadow: 5px 5px 10px black;
+    border-radius: 6px;
+    background-color: antiquewhite;
+    color: darkslategray;
+    width: 1000px;
+}
+
+main {
+    margin-top: 20px;
+    border-style: groove;
+    margin-left: 200px;
+    font-size: 25px;
+    width: 1000px;
+    background-color: antiquewhite;
+    color: darkslategray;
+    text-align: center;
+    box-shadow: 5px 5px 10px black;
+    border-radius: 6px;
 }
