--- a/Calc_Gauss/css/style.css
+++ b/Calc_Gauss/css/style.css
@@ -25,4 +25,21 @@ main {
     text-align: center;
     box-shadow: 5px 5px 10px black;
     border-radius: 6px;
+    height: 200px;
+}
+
+input#n1, #n2 {
+    height: 30px;
+    border-radius: 6px;
+    font-size: 25px;
+}
+
+button#bt {
+    width: 200px;
+    height: 45px;
+    border-radius: 6px;
+    background-color: darkslategray;
+    color: antiquewhite;
+    border-style: groove;
+    border-color: antiquewhite;   
 }
